# MotionDesk

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
Casks/: motiondesk.rb
bridge/: MotionDeskBridge.h  MotionDeskBridge.mm
formula/: motiondesk.rb
resources/: AppIcon.icns  Info.plist
src/: AudioController.h  AudioController.mm  MenuBarBridge.h  MenuBarBridge.mm  PowerMonitor.h  PowerMonitor.mm  Types.h  Types.mm  WallpaperEngine.h  WallpaperEngine.mm  main.mm
